--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-core</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
